# qspiritguide-unsloth

./: .gitignore  .wiki_state.json  README.md  compile_dataset.py  compile_wiki.py  config.json  copilot-instructions.md  create_distill_notebook.py  create_notebook.py  distill.ipynb  distill.py  distill_wiki.py  fetch_webpages.py  finetune.ipynb  finetune.py  manage_ignore.py  pyproject.toml  refine_wiki.py  requirements.txt  urls.txt
.antigravity/: rules.md
raw_data/: seth_material_10_principles.txt  seth_material_inet_archive.txt
